--- a/creators.html
+++ b/creators.html
@@ -109,8 +109,8 @@
             <div class="cd-scrolling-bg__content">
  	
 	<h2 style="color:white"><b><i>The Creators Behind Fantasy Physics</b></i></h2><br>
-	<div class="clearfix round1" style="color:white;margin-right:15px;text-align:center">		    
-	<img src="https://physics.ku.edu/sites/physics.ku.edu/files/Rogan_Christopher%20S_%20PROV-02685_1702685_Aug%2015_180x225px.jpg" style="float:left" height:"170">
+	<div class="clearfix round1" style="color:white;margin-right:15px">		    
+	<img src="https://physics.ku.edu/sites/physics.ku.edu/files/Rogan_Christopher%20S_%20PROV-02685_1702685_Aug%2015_180x225px.jpg" style="float:left" width="200" height:"170">
 		<font size="3">Professor Christopher Rogan has been the J.D. Stranthan Assistant Professor of Experimental Physics at the University of Kansas'
 		Department of Physics and Astronomy since August of 2017. He received his A.B. from the Department of Physics at Princeton University
 		and both his Masters of Science and Ph.D. degrees from the California Institute of Technology; his research focuses on 
