--- a/creators.html
+++ b/creators.html
@@ -114,7 +114,7 @@
 		<font size="3">Professor Christopher Rogan has been the J.D. Stranthan Assistant Professor of Experimental Physics at the University of Kansas'
 		Department of Physics and Astronomy since August of 2017. He received his A.B. from the Department of Physics at Princeton University
 		and both his Masters of Science and Ph.D. degrees from the California Institute of Technology; his research focuses on 
-		<a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy.</u></a>The brainchild of Professor Rogan, <i>Fantasy Physics</i>
+		<a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy</u></a>. The brainchild of Professor Rogan, <i>Fantasy Physics</i>
 		began development within a year of his arrival to the University.</font></div>	    
 			    
       
