--- a/creators.html
+++ b/creators.html
@@ -115,7 +115,7 @@
 		Department of Physics and Astronomy since August of 2017. He received his A.B. from the Department of Physics at Princeton University
 		and both his Masters of Science and Ph.D. degrees from the California Institute of Technology; his research focuses on 
 		<a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy</u></a>. The brainchild of Professor Rogan, <i>Fantasy Physics</i>
-		began development within a year of his arrival to the University.</font></div>	
+		began development within a year of his arrival to the University.</font></div><hr><br>	
 		    
 	<div class="clearfix round1" style="color:white;text-align:center">		    
 	<img src="https://engr.ku.edu/sites/engr.ku.edu/files/Linda%20Deng%207.JPG" style="float:left;margin-right:15px">
@@ -123,8 +123,9 @@
 			<u>Engineering Physics, with a concentration in Digital Electronic Systems</u></a>. This major allows for concurrent enrollment in 
 			computer science & engineering and advanced physics courses, allowing for an interdiscplinary approach between the two. She is also a part of the 
 			<a href="https://engr.ku.edu/self" style="color:white"><u>SELF Engineering Leadership Fellows Program</u></a>, the <a href="https://honors.ku.edu/" 
-		        style="color:white"><u>University Honors Program</u></a>, and a research assistant working under the direction of Professor Rogan in the University's
-			<a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy Physics</u></a> group.</font></div>
+		        style="color:white"><u>University Honors Program</u></a>, and a research assistant working under the direction of Professor Rogan in the development
+			of <i>Fantasy Physics</i> in the University's <a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy Physics</u></a> group.</font>
+		    	</div>
       
        <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
