--- a/creators.html
+++ b/creators.html
@@ -16,7 +16,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/hires/2017/7-scientistsha.jpg");
+        background-image: url("https://www.sciencedaily.com/images/2018/01/180124100330_1_900x600.jpg");
     }
     .cd-fixed-bg
     {
@@ -115,7 +115,7 @@
 		Department of Physics and Astronomy since August of 2017. He received his A.B. from the Department of Physics at Princeton University
 		and both his Masters of Science and Ph.D. degrees from the California Institute of Technology; his research focuses on 
 		<a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy</u></a>. The brainchild of Professor Rogan, <i>Fantasy Physics</i>
-		began development within a year of his arrival to the University.</font></div><br>	
+		began development within a year of his arrival to the University.</font></div><br><br>	
 		    
 	<div class="clearfix round1" style="color:white;text-align:center">		    
 	<img src="https://engr.ku.edu/sites/engr.ku.edu/files/Linda%20Deng%207.JPG" style="float:left;margin-right:15px">
