--- a/creators.html
+++ b/creators.html
@@ -16,7 +16,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://www.sciencedaily.com/images/2018/01/180124100330_1_900x600.jpg");
+        background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/28/Moai_Under_the_Milky_Way%2C_Ahu_Tongariki%2C_Easter_Island.jpg");
     }
     .cd-fixed-bg
     {
