--- a/creators.html
+++ b/creators.html
@@ -16,7 +16,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/28/Moai_Under_the_Milky_Way%2C_Ahu_Tongariki%2C_Easter_Island.jpg");
+        background-image: url("http://thescienceexplorer.com/sites/thescienceexplorer.com/files/styles/content_image__large/public/blog/milky-way-984050_1280.jpg?itok=E4sVuCT1&timestamp=1461010955");
     }
     .cd-fixed-bg
     {
@@ -125,7 +125,12 @@
 			<a href="https://engr.ku.edu/self" style="color:white"><u>SELF Engineering Leadership Fellows Program</u></a>, the <a href="https://honors.ku.edu/" 
 		        style="color:white"><u>University Honors Program</u></a>, and a research assistant working under the direction of Professor Rogan in the development
 			of <i>Fantasy Physics</i> in the University's <a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy Physics</u></a> group.</font>
-		    	</div>
+		    	</div><br><br>
+		    
+`	<div class="clearfix round1" style="color:white;text-align:center">		    
+	<img src="" style="float:left;margin-right:15px">
+		<font size="3">John Styers is a </font>
+		    	</div>		    
       
        <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
