--- a/creators.html
+++ b/creators.html
@@ -129,7 +129,8 @@
 		    
 `	<div class="clearfix round1" style="color:white;text-align:center">		    
 	<img src="" style="float:left;margin-right:15px">
-		<font size="3">John Styers is a </font>
+		<font size="3">John Styers is a junior at the University of Kansas studying <a href="https://cpe.ku.edu/" style="color:white"><u>Chemical Engineering</u>
+			with a minor in Physics.</font>
 		    	</div>		    
       
        <button id="myBtn" onclick="topFunction()">
