--- a/creators.html
+++ b/creators.html
@@ -16,7 +16,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://thescienceexplorer.com/sites/thescienceexplorer.com/files/styles/content_image__large/public/blog/milky-way-984050_1280.jpg?itok=E4sVuCT1&timestamp=1461010955");
+        background-image: url("http://www.national-geographic.pl/media/cache/photo_view_big/uploads/media/userphoto/0001/98/183eb300d0cd85e3dbe42295c50444c4c2ccb3cd.jpeg");
     }
     .cd-fixed-bg
     {
@@ -115,7 +115,8 @@
 		Department of Physics and Astronomy since August of 2017. He received his A.B. from the Department of Physics at Princeton University
 		and both his Masters of Science and Ph.D. degrees from the California Institute of Technology; his research focuses on 
 		<a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy</u></a>. The brainchild of Professor Rogan, <i>Fantasy Physics</i>
-		began development within a year of his arrival to the University.</font></div><br><br>	
+		began development within a year of his arrival to the University.</font></div>
+	    <br><br>	
 		    
 	<div class="clearfix round1" style="color:white;text-align:center">		    
 	<img src="https://engr.ku.edu/sites/engr.ku.edu/files/Linda%20Deng%207.JPG" style="float:left;margin-right:15px">
@@ -125,7 +126,8 @@
 			<a href="https://engr.ku.edu/self" style="color:white"><u>SELF Engineering Leadership Fellows Program</u></a>, the <a href="https://honors.ku.edu/" 
 		        style="color:white"><u>University Honors Program</u></a>, and a research assistant working under the direction of Professor Rogan in the development
 			of <i>Fantasy Physics</i> in the University's <a href="http://kuhep.ku.edu/" style="color:white"><u>Experimental High Energy Physics</u></a> group.</font>
-		    	</div><br><br>
+		    	</div>
+	    <br><br>
 		    
 `	<div class="clearfix round1" style="color:white;text-align:center">		    
 	<img src="" style="float:left;margin-right:15px">
