--- a/about.html
+++ b/about.html
@@ -117,9 +117,9 @@
      
       <h3 style="margin-left:5px;font-size:30px;color:white">Contact Us</h3>
      <p class="round1" style="text-indent:15px;color:white;font-size:22px">Please feel free to contact the Fantasy Physics team with questions, comments, and/or
-	     feedback: <br><address><ul><li><a href="mailto:crogan@ku.edu">Professor Christopher Rogan</a>.
-		    <br><address<ul><li><a href="mailto:ldeng09@ku.edu">Linda Deng</a>.
-		    <br><i>The University of Kansas, Malott Hall <br> 1251 Wescoe Hall Dr <br> Lawrence, KS 66045</p>     
+	     feedback: <br><address><a href="mailto:crogan@ku.edu" style="color:white">Professor Christopher Rogan</a>.
+		    <br><address<a href="mailto:ldeng09@ku.edu" style="color:white">Linda Deng</a>.
+		    <br><i>The University of Kansas, Malott Hall <br> 1251 Wescoe Hall Dr <br> Lawrence, KS 66045</i></p>     
 
      <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
