--- a/about.html
+++ b/about.html
@@ -115,10 +115,10 @@
      <p class="round1" style="text-indent:15px;color:white;font-size:20px"> Physics encompasses more than just the study of how an apple falls from a tree or the way a rocket is propelled. The study of physics has applications from the largest galaxies to the smallest subatomic particles. Physics is an underlying factor of many other sciences, including chemistry, seismology, and astronomy.
      </p><br><br>
      
-      <h3 style="color:white">Contact Us</h3>
-     <p style="text-indent:15px;color:white;font-size:18px">Please feel free to contact the Fantasy Physics team with questions, comments, and/or
-	     feedback: <br><address><a href="mailto:crogan@ku.edu" style="color:white"><u>Professor Christopher Rogan</u></a></address>.
-		    <br><address><a href="mailto:ldeng09@ku.edu" style="color:white"><u>Linda Deng</u></a></address>.
+      <h2 style="color:white">Contact Us</h3>
+     <p style="text-indent:15px;color:white;font-size:20px">Please feel free to contact the Fantasy Physics team with questions, comments, and/or
+	     feedback: <br><a href="mailto:crogan@ku.edu" style="color:white"><u>Professor Christopher Rogan</u></a>.
+		    <br><a href="mailto:ldeng09@ku.edu" style="color:white"><u>Linda Deng</u></a>.
 		    <br><i>The University of Kansas <br> Malott Hall <br> 1251 Wescoe Hall Dr <br> Lawrence, KS 66045</i></p>     
 
      <button id="myBtn" onclick="topFunction()">
