--- a/about.html
+++ b/about.html
@@ -117,9 +117,9 @@
      
       <h3 style="color:white">Contact Us</h3>
      <p style="text-indent:15px;color:white;font-size:20px">Please feel free to contact the Fantasy Physics team with questions, comments, and/or
-	     feedback: <br><br><font size="2"><a href="mailto:crogan@ku.edu" style="color:white"><u>Professor Christopher Rogan</u></a>
-		    <br><br><a href="mailto:ldeng09@ku.edu" style="color:white"><u>Linda Deng</u></a>
-		    <br><br><i>The University of Kansas <br> Malott Hall <br> 1251 Wescoe Hall Dr <br> Lawrence, KS 66045</i></font></p>     
+	     feedback: <br><font size="4"><a href="mailto:crogan@ku.edu" style="color:white"><u>Professor Christopher Rogan</u></a>
+		    <br><a href="mailto:ldeng09@ku.edu" style="color:white"><u>Linda Deng</u></a>
+		    <br><i>The University of Kansas <br> Malott Hall <br> 1251 Wescoe Hall Dr <br> Lawrence, KS 66045</i></font></p>     
 
      <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
