--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("http://www.astropics.com/images/products/1394.jpg");
+        background-image: url("http://7-themes.com/data_images/out/11/6805016-outer-space-wallpaper.jpg");
     }
     .cd-fixed-bg
     {
