--- a/joinatournament.html
+++ b/joinatournament.html
@@ -120,9 +120,52 @@
             <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
             <p class="round1" style="color:white;text-align:center"><font size="4">You have deciphered the rules, seen the crew, and know how we hunt. <br><br>It is now time for you, The Executive,
-                to buy into the game.<br><br>Select your crew below and begin to understand the Universe.</p></font>
-
-
+                to buy into the game.<br><br>Select your crew below and begin to understand the Universe.</p></font><br>
+            <h2 style="color:white"><b><i>WIMP Direct Dark Matter Members</i></b></h2>
+            <table colspan="3" class="table table-bordered" style="color:white">
+       	        <tr>
+       	            <th scope="col" style="text-align:center">LUX-ZEPLIN (LZ) &nbsp;&nbsp; <input type="checkbox"></th>
+       	            <th scope="col" style="text-align:center">ArDM (Argon Dark Matter Experiment) &nbsp;&nbsp; <input type="checkbox"></th>
+              	    <th scope="col" style="text-align:center">XMASS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">XENON &nbsp;&nbsp; <input type="checkbox"></th>
+       	        </tr>
+                <tr>
+                    <th scope="col" style="text-align:center">PICASSO &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">LUX &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">PICO &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">COSINE-100 &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th scope="col" style="text-align:center">EDELWEISS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">DarkSide &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">CRESST &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">DEAP-3600 &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th scope="col" style="text-align:center">SuperCDMS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">DARWIN &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">CoGeNT &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th scope="col" style="text-align:center">COUPP-60 &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+            </table><br>
+            <h2 style="color:white"><b><i>Indirect Dark Matter Members</i></b></h2>
+            <table colspan="3" class="table table-bordered" style="color:white">
+                <tr>
+                    <th style="text-align:center">Super-Kamiokande &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">PAMELA &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">MAGIC Telescopes &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">HESS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">HPS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">GAPS &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">FGST-LAT &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">CTA &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">AMS &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+            </table>
 
 
 
