--- a/joinatournament.html
+++ b/joinatournament.html
@@ -119,7 +119,8 @@
             <div class="w3-container">
             <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-            <p class="round1" style="color:white;text-align:center"><font size="4">You have deciphered the rules, seen the crew, and know how we hunt. <br><br>It is now time for you, The Executive,
+            <p class="round1" style="color:white;text-align:center"><font size="4">You have deciphered <a href="rules.html" style="color:white"><u>the game</u></a>,
+                seen <a href="directdarkmatter.html" style="color:white"><u>the crew</u></a>, and know how we <a href="scoringrubric.html" style="color:white"><u>hunt</u></a>. <br><br>It is now time for you, The Executive,
                 to buy into the game.<br><br>Select your crew below and begin to understand the Universe.</p></font><br>
             <h2 style="color:white"><b><i>WIMP Direct Dark Matter Members</i></b></h2>
             <table colspan="3" class="table table-bordered" style="color:white">
@@ -165,7 +166,75 @@
                     <th style="text-align:center">CTA &nbsp;&nbsp; <input type="checkbox"></th>
                     <th style="text-align:center">AMS &nbsp;&nbsp; <input type="checkbox"></th>
                 </tr>
-            </table>
+            </table><br>
+            <h2 style="color:white"><b><i>Neutrino Members</i></b></h2>
+            <table colspan="3" class="table table-bordered" style="color:white">
+                <tr>
+                    <th style="text-align:center">PROSPECT &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">NOvA &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">MicroBooNE &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">COHERENT &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">JUNO &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">DUNE &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">MINOS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">BOREXINO &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">MiniBooNE &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <td style="text-align:center">ICARUS &nbsp;&nbsp; <input type="checkbox"></th>
+                    <td colspan="2" style="text-align:center">T2K &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+            </table><br>
+            <h2 style="color:white"><b><i>Astroparticle Members</i></b></h2>
+            <table colspan="3" class="table table-bordered" style="color:white">
+                <tr>
+                    <th style="text-align:center">KATRIN &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">IceCube &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">FermiLab &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">ADMX (The Axion Dark Matter eXperiment) &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">MeV Gamma-ray &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">ANTARES &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th colspan="2" style="text-align:center">CERN Axion Solar Telescope &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+            </table><br>
+            <h2 style="color:white"><b><i>LHC Atlas Members</i></b></h2>
+            <table colspan="3" class="table table-bordered" style="color:white">
+                <tr>
+                    <th style="text-align:center">The Standard Model &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Higgs Physics &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">Supersymmetry &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Exotica &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+            </table><br>
+            <h2 style="color:white"><b><i>LHC CMS Members</i></b></h2>
+            <table colspan="3" class="table table-bordered" style="color:white">
+                <tr>
+                    <th style="text-align:center">The Standard Model &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Higgs Physics &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th style="text-align:center">Supersymmetry &nbsp;&nbsp; <input type="checkbox"></th>
+                    <th style="text-align:center">Exotica &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+                <tr>
+                    <th colspan="2" style="text-align:center">Research & Development, Upgrades, Detector Operation, & Instrumentation &nbsp;&nbsp; <input type="checkbox"></th>
+                </tr>
+            </table><br>
 
 
 
