--- a/joinatournament.html
+++ b/joinatournament.html
@@ -12,7 +12,7 @@
             }
             .cd-fixed-bg.cd-fixed-bg--1
             {
-                background-image: url("http://deskbg.com/s3/wpp/9/9941/molding-desktop-background.jpg");
+                background-image: url("http://hdhintergrundbilder.net/image/weltraum/1574/nebelfleck-planet-gluehen-strahlen.jpg");
             }
             .cd-fixed-bg
             {
