--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -103,32 +103,34 @@
        <div class="w3-container">
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
+     <br><br>
      <p class="round1" style="color:white"><font size="4">You have found your way to <i>The Hunt</i> - now take a look at how Fantasy Physics hunts for and
 	     administers points to each Crew Member.</p></font size>
      <br><br>
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
-	    <th scope="col" style="text-align:center">Largest Dataset; +2</th>
-	    <th scope="col" style="text-align:center">Highest or Lowest Temperature; +1</th>
-       	<th scope="col" style="text-align:center">Most Number of Feynman Diagrams; +2</th>
-        <th scope="col" style="text-align:center">Most Greek Letters; +1</th>
-	    <th scope="col" style="text-align:center">Most Anecdotes Told; +2</th>
+	    <th scope="col" style="text-align:center"><font size="3">Largest Dataset; +2</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Highest or Lowest Temperature; +1</font></th>
+       	<th scope="col" style="text-align:center"><font size="3">Most Number of Feynman Diagrams; +2</font></th>
+        <th scope="col" style="text-align:center"><font size="3">Most Greek Letters; +1</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Most Anecdotes Told; +2</font></th>
 	 </tr>
 	 <tr>
-	    <th scope="col" style="text-align:center">Using a Pointer; +0.5</th>
-	    <th scope="col" style="text-align:center">Number of Graphs Used: <br> > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</th>
-	    <th scope="col" style="text-align:center">Most Data Points on a Graph; +1</th>
-      	    <th scope="col" style="text-align:center">Most Photographs Included; +1</th>
-     	    <th scope="col" style="text-align:center">Most Number of Significant Figures; +0.5</th>
+	    <th scope="col" style="text-align:center"><font size="3">Using a Pointer; +0.5</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Number of Graphs Used: <br> > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Most Data Points on a Graph; +1</font></th>
+      	    <th scope="col" style="text-align:center"><font size="3">Most Photographs Included; +1</font></th>
+     	    <th scope="col" style="text-align:center"><font size="3">Most Number of Significant Figures; +0.5</font></th>
 	 </tr>
      <tr>
-     	    <th scope="col" style="text-align:center">Time Presented: <br> Time Allotted = +2; <br> < Time Allotted = +0.5</th>
-    	    <th scope="col" style="text-align:center">Most Geometric Shapes; +2</th>
-	    <th scope="col" style="text-align:center">Most Questions Asked by Audience; +1</th>
-	    <th scope="col" style="text-align:center">Most Standard Deviation Graphs; +2</th>
-	    <th scope="col" style="text-align:center">Most Arrows Used to Point to Other Items; +1</th>
+     	    <th scope="col" style="text-align:center"><font size="3">Time Presented: <br> Time Allotted = +2; <br> < Time Allotted = +0.5</font></th>
+    	    <th scope="col" style="text-align:center"><font size="3">Most Geometric Shapes; +2</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Most Questions Asked by Audience; +1</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Most Standard Deviation Graphs; +2</font></th>
+	    <th scope="col" style="text-align:center"><font size="3">Most Arrows Used to Point to Other Items; +1</font></th>
 	 </tr>
     </table>
+    <br>
     <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>
     <br><br><br>
 
