--- a/about.html
+++ b/about.html
@@ -105,20 +105,21 @@
         <div class="cd-scrolling-bg__content">
 
      <h1 style="text-align:center;color:white"><b><i> About Fantasy Physics </b></i></h1><br>
-     <h2 style="color:white">What is "Fantasy Physics"?</h3>
-     <p class="round1" style="text-indent:15px;color:white;font-size:20px"> Fantasy Physics is an online contest that orients players against each other in an
-         intellectual battle the likes of which this world has never seen. Fantasy Physics in a fun game for any and all physics lovers.
-         Fantasy Physics promotes learning and entertainment by combining the elements of one of the largest official physics conferences
-         in the world and competition.</p><br><br>
+     <h2 style="color:white">What is "<i>Fantasy Physics</i>"?</h2>
+     <p class="round1" style="color:white"><font size="4"><i>Fantasy Physics</i> is a game in which the players serve as "The Executive"
+         of a crew of physics experiments. The Executives create their crew by participating in a draft in which all crew members are physics experiments
+         that are actually conducted. <br><br>As an interactive game, <i>Fantasy Physics</i> promotes learning and entertainment by combining
+         the elements of one of the largest official physics conferences in the world and online gameplay. It is for all physics lovers and is a great way to get individuals
+         interested in physics.</font></p><br><br>
 
-     <h2 style="color:white">Why Physics?</h3>
-     <p class="round1" style="text-indent:15px;color:white;font-size:20px"> Physics encompasses more than just the study of how an apple falls from a tree or the way a rocket is propelled. The study of physics has applications from the largest galaxies to the smallest subatomic particles. Physics is an underlying factor of many other sciences, including chemistry, seismology, and astronomy.
-     </p><br><br>
+     <h2 style="color:white">Why Physics?</h2>
+     <p class="round1" style="color:white"><font size="4"> Physics encompasses more than just the study of how an apple falls from a tree or the way a rocket is propelled. The study of physics has applications from the largest galaxies to the smallest subatomic particles. Physics is an underlying factor of many other sciences, including chemistry, seismology, and astronomy.
+     </font></p><br><br>
 
      <h3 style="color:white">Contact Us</h3>
      <p class="round1" style="color:white;font-size:20px">Please feel free to contact the Fantasy Physics team with questions, comments, and/or
 	     feedback: <br><br><font size="4"><a href="mailto:crogan@ku.edu" style="color:white"><u>Professor Christopher Rogan</u></a>
-		    <br><a href="mailto:ldeng09@ku.edu" style="color:white"><u>Linda Deng</u></a>
+		    <br><a href="mailto:ldeng09@ku.edu" style="color:white"><u>Linda Deng</u></a><br>
 		    <br><i>The University of Kansas <br> Malott Hall <br> 1251 Wescoe Hall Dr <br> Lawrence, KS 66045</i></font></p>
 
        <button id="myBtn" onclick="topFunction()">
@@ -143,7 +144,7 @@
 	   }
 	    </script>
        <div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
+             <p style="text-align:left;color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
        </div>
        </div>
