--- a/about.html
+++ b/about.html
@@ -113,13 +113,15 @@
          interested in physics.</font></p><br><br>
 
      <h2 style="color:white">Why Physics?</h2>
-     <p class="round1" style="color:white"><font size="4"> Physics encompasses more than just the study of how an apple falls from a tree or the way a rocket is propelled. The study of physics has applications from the largest galaxies to the smallest subatomic particles. Physics is an underlying factor of many other sciences, including chemistry, seismology, and astronomy.
+     <p class="round1" style="color:white"><font size="4"><i>Physics</i> is the study of matter, energy, and everything in between. It is the base for biology, chemistry, engineering, astronomy, and so much more.
+         <br><br>The studies and experiments orchestrated within the field, from galaxy clusters, to technological advancements, to natural phenomena, explain the universe we live in, which is vital to the continued, and future, progress of
+         humanity.
      </font></p><br><br>
 
      <h3 style="color:white">Contact Us</h3>
      <p class="round1" style="color:white;font-size:20px">Please feel free to contact the Fantasy Physics team with questions, comments, and/or
-	     feedback: <br><br><font size="4"><a href="mailto:crogan@ku.edu" style="color:white"><u>Professor Christopher Rogan</u></a>
-		    <br><a href="mailto:ldeng09@ku.edu" style="color:white"><u>Linda Deng</u></a><br>
+	     feedback: <br><br><font size="4"><a href="mailto:crogan@ku.edu" data-toggle="tooltip" title="Click to email" style="color:white"><u>Professor Christopher Rogan</u></a>
+		    <br><a href="mailto:ldeng09@ku.edu" data-toggle="tooltip" title="Click to email" style="color:white"><u>Linda Deng</u> (Developer)</u></a><br>
 		    <br><i>The University of Kansas <br> Malott Hall <br> 1251 Wescoe Hall Dr <br> Lawrence, KS 66045</i></font></p>
 
        <button id="myBtn" onclick="topFunction()">
