--- a/rules.html
+++ b/rules.html
@@ -1,8 +1,8 @@
                                                         <!--"thegame.html"-->
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-<style> 
+<style>
     .flex-container
     {
         display: flex;
@@ -27,9 +27,15 @@
     {
         min-height: 100%;
     }
+    .round1
+    {
+        border: 2px solid white;
+        border-radius: 5px;
+        padding: 15px;
+    }
     #myBtn
     {
-	display: none; 
+	display: none;
 	position: fixed;
 	bottom: 10px;
   	right: 10px;
@@ -63,7 +69,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>   
+            <span class="icon-bar"></span>
         </button>
     <a class="navbar-brand" href="index.html">Fantasy Physics</a>
     </div>
@@ -80,11 +86,11 @@
           <li><a href="neutrinos.html">Neutrino Members</a></li>
           <li><a href="astroparticle.html">Astroparticle Members</a></li>
           <li><a href="lhcatlas.html">LHC Atlas Members</a></li>
-          <li><a href="lhccms.html">LHC CMS Members</a></li>            
+          <li><a href="lhccms.html">LHC CMS Members</a></li>
         </ul>
       	   	</li>
             <li><a href="scoringrubric.html">The Hunt</a></li>
-            <li><a href="joinatournament.html">Join a Tournament</a></li> 
+            <li><a href="joinatournament.html">Join a Tournament</a></li>
             <li><a href="instructors.html">The Instructors</a></li>
         </ul>
 
@@ -93,29 +99,145 @@
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
 	</ul>
-      </div>   
+      </div>
       </nav>
     <div class="w3-container">
     <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-    <h1 style="margin-left:5px;color:white">Rules & Definitions<br><br></h1>
-   	<h3 style="margin-left:25px;font-size:30px;color:white">Definitions</h3>
+    <h1 style="color:white"><i>The Game</i><br></h1>
+    <p class="round1" style="color:white"><font size="4">After joining Fantasy Physics, you explore and recruit physics experiments, compete against
+        other fantasy Executives, and test your Exeuctive fantasy skills.<br><br> As The Executive, you select real-life physics experiments and utilize real-life stats,
+        based on <a href="scoringrubric.html" style="color:white"><i><u>The Hunt</u></i></a>, to compete against other Executives and their crew to see whose strategy reigned supreme
+        and topped the leaderboards. In Fantasy Physics, you're in charge; let's get started.</p></font><br><br>
+
+
+        <div class="container">
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1 class="panel-title">
+                  <a data-toggle="collapse" href="#collapse1" style="color:black"><h4>Gameplay Monikers</a></h4>
+              </h1>
+              </div>
+              <div id="collapse1" class="panel-collapse collapse">
+                <ul class="list-group">
+                  <li class="list-group-item"><font size="3"><i><b>The Executive</i></b> - Owner and in charge of their own Crew</font></li>
+                  <li class="list-group-item"><font size="3"><i><b>The Alliance</i></b> - Where all Executive's Crews are housed and competing against other Crews</font></li>
+                  <li class="list-group-item"><font size="3"><i><b>The Crew</i></b> - Chosen Physics research subcategories that encompass The Crew Members</font></li>
+                  <li class="list-group-item"><font size="3"><i><b>The Crew Members</i></b> - Chosen physics experiments conducted under each specific research subcategory;
+                      these Members are to be selected for The Executive's own Crew</font></li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+    <div class="container">
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse1">Collapsible Group 1</a>
+                    </h4>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
+                    </h4>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse3">Collapsible Group 3</a>
+                    </h4>
+                </div>
+                <div id="collapse3" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
+                    </h4>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
+                    </h4>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
+                    </h4>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse2">Collapsible Group 2</a>
+                    </h4>
+                </div>
+                <div id="collapse8" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse8">Collapsible Group 8</a>
+                    </h4>
+                </div>
+                <div id="collapse2" class="panel-collapse collapse">
+                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <ul>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>The Executive - </b></i>Contenders of the game</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>EP - </b></i>Event Points</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>GP - </b></i>Game Points</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Tournament - </b></i>A general category of physics that contains many groups of more specific topics</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Tournament Champion - </b></i>The highest degree of “winning” that a User can achieve</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Event - </b></i>A subcategory within a Tournament wherein specific experiments relating to the subcategory are chosen as “Teams”</li>
-        <li style="margin-left:75px;color:white;font-size:22px">This is where all the points for the game are earned</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Preliminary Winner(s) - </b></i>Users who win Events within a Tournament</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Crew Members - </b></i>Experiments that are selected by Users</li>
-        <li style="margin-left:50px;color:white;font-size:22px"><b><i>Crew - </b></i>List of Teams that a User chooses for an Event</li>
      </ul></div>
-     <h3 style="margin-left:25px;font-size:30px;color:white">Game Tree</h3>
-     <ul>
-         <li style="margin-left:50px;font-size:22px;color:white">Game ---> Tournament ---> Event</li>
-     </ul>
+
      <h3 style="margin-left:25px;font-size:30px;color:white">Game Play Process</h3>
      <ul>
          <li style="margin-left:50px;color:white;font-size:22px">Users choose a Tournament they would like to participate in</li>
@@ -129,7 +251,7 @@
      <h3 style="margin-left:25px;font-size:30px;color:white">What is a Tournament?</h3>
      <ul>
          <li style="margin-left:50px;color:white;font-size:25px">A Tournament is the highest tier, with regards to winning, of the game</li>
-         <li style="margin-left:75px;color:white;font-size:22px">It’s a general category of physics within which there are many subcategories (Events)</li> 
+         <li style="margin-left:75px;color:white;font-size:22px">It’s a general category of physics within which there are many subcategories (Events)</li>
          <li style="margin-left:100px;color:white;font-size:19px">EXAMPLE: <i>Neutrino Tournament</i></li>
          <li style="margin-left:125px;color:white;font-size:16px">The general category is "Neutrino(s)"</li>
      </ul>
@@ -187,7 +309,7 @@
      <ul>
          <li style="margin-left:50px;color:white;font-size:20px"><i>User B won the most Events and thus, the Tournament</i></li>
          <li style="margin-left:75px;color:white;font-size:18px">The preliminary winner who wins the most Events is the Tournament Champion</li>
-         <li style="margin-left:100px;color:white;font-size:16px">Tie Breaker is activated, if applicable, until there is only one User left</li>  
+         <li style="margin-left:100px;color:white;font-size:16px">Tie Breaker is activated, if applicable, until there is only one User left</li>
      </ul><br>
      <h1 style="margin-left:5px;font-size:30px;color:white">Event Rules/Game Play</h1>
      <h3 style="margin-left:25px;font-size:30px;color:white">What is an event?</h3>
@@ -232,8 +354,8 @@
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
 	  <button id="myBtn" onclick="topFunction()">
-	  <span class="glyphicon glyphicon-arrow-up"></span> Top </button>   
-	    
+	  <span class="glyphicon glyphicon-arrow-up"></span> Top </button>
+
    	   <script>
 	   window.onscroll = function() {scrollFunction()};
 	   function scrollFunction()
@@ -254,8 +376,8 @@
 	   }
 	    </script>
    	<div class="flex-container">
-             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
-             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
+             <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> |
+             <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a> | &copy; 2018</p>
         </div>
         </div>
         </div>
