--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
      </div>
      <div class="footer">
          <i><p style="margin-left:8px">Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> |
-         <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p>
+         <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a> | &copy; 2018</p>
      </div>
      </div></div>
 
