--- a/creators.html
+++ b/creators.html
@@ -131,8 +131,11 @@
 
 `	<div class="clearfix round1" style="color:white;text-align:center">
 
-		<font size="3">John Styers is a junior at the University of Kansas studying <a href="https://cpe.ku.edu/" style="color:white"><u>Chemical Engineering</u>
-			with a minor in Physics.</font></div>
+		<font size="3">John Styers is a senior at the University of Kansas studying <a href="https://cpe.ku.edu/" style="color:white"><u>Chemical Engineering</u>
+			with a focus in Biomedical Engineering. He also is studying Physics as a minor. He achieved a position on the Dean's List both semesters of his 
+			sophomore school year. He hopes to one day design, develope, and market real-time integrated prostetic limbs and organs for commercial use by everyday
+			citizens of whom wish to upgrade their restricted biological bodies into something more versatile and less fragile. He also hopes to help design a 
+			more effecient and environmentally friendly engine than the common petrol engine used today.</font></div>
 
        <button id="myBtn" onclick="topFunction()">
 	   <span class="glyphicon glyphicon-arrow-up"></span> Top </button>
