--- a/creators.html
+++ b/creators.html
@@ -130,7 +130,7 @@
 	    <br>
 
 `	<div class="clearfix round1" style="color:white;text-align:center">
-		<font size="4">John Styers is a senior at the University of Kansas studying <a href="https://cpe.ku.edu/" style="color:white"><u>Chemical Engineering</u>
+		<font size="4">John Styers is a senior at the University of Kansas studying <a href="https://cpe.ku.edu/" style="color:white"><u>Chemical Engineering</u></a>
 			with a focus in Biomedical Engineering. He also is studying Physics as a minor. He achieved a position on the Dean's List both semesters of his 
 			sophomore school year. He hopes to one day design, develope, and market real-time integrated prostetic limbs and organs for commercial use by everyday
 			citizens of whom wish to upgrade their restricted biological bodies into something more versatile and less fragile. He also hopes to help design a 
